syntax = "proto3";

package lamportClocks;

option go_package = "proto/lamportclocks.proto;lamportClocks_proto";

service MessageService {
  rpc SendMessage (MessageRequest) returns (MessageResponse) {}

}


// The request message containing the user's name.
message MessageRequest {
  string action = 1;
  int64 accountNum =5;
  int64 t= 3;
  int64 amount =4;
}

// The response message containing the greetings
message MessageResponse {
  string ack = 1;
  int64 t =2;
}
